[package]
name = "shaketune_native"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
numpy = "0.23"
realfft = "3"
zstd = "0.13"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
# Unwind (not abort) so an unexpected Rust panic surfaces in Python as a pyo3
# PanicException instead of SIGABRT-ing the whole graph subprocess.
panic = "unwind"
strip = "symbols"
